# python-assessment

./: .gitignore  DETAILS.md  LICENSE  README.md  properties.json  pyproject.toml  requirements.txt
.github/workflows/: gradr.yml
src/: .env.sample  manage.py
src/assessment/: helpers.py  serializers.py  urls.py  views.py
src/python_assessment/: asgi.py  exceptions.py  settings.py  urls.py  wsgi.py
